Fixed message overflow

--- a/submission/botOverlayStyles.css
+++ b/submission/botOverlayStyles.css
@@ -57,6 +57,7 @@
     border-style: solid;
     border-color: rgb(255 255 255 / 0.6);
     color: white;
+    width: 70%;
 }
 
 .thinking {
